web/wp-content/themes/cncf-twenty-two/source/scss/components/_front-page.scss
.home-hero {
	overflow: hidden;
	position: relative;
	&__video {
		width: 100%;
		height: 100%;
		object-fit: cover;
		position: absolute;
		z-index: 1;
		top: 0;
		left: 0;
	}
	&__poster,
	&__overlay {
		position: absolute;
		width: 100%;
		height: 100%;
		top: 0;
		left: 0;
		object-fit: cover;
	}
	&__poster {
		z-index: 2;
		visibility: visible;
		opacity: 1;
		transition: all 0.5s ease-out;
		&.video-has-loaded {
			transition: all 0.45s ease-out;
			visibility: hidden;
			opacity: 0;
		}
	}
	&__overlay {
		z-index: 3;
		background-color: $black;
		&.poster-has-loaded {
			background-color: rgba($black, 0.6);
		}
	}
	&__content {
		position: relative;
		z-index: 4;
		color: $white;
	}
	&__title {
		margin-top: min(36%, 150px);
		font-weight: 800;
		font-size: 38px;
		line-height: 135%;
		@media (min-width: 412px) {
			font-size: 42px;
		}
		@media (min-width: 600px) {
			font-size: 60px;
			line-height: 110%;
		}
		@media (min-width: 1000px) {
			font-size: 78px;
		}
		span {
			font-weight: 400;
		}
	}
	&__description {
		margin-top: min(8%, 40px);
		margin-bottom: min(8%, 40px);
		@media (min-width: 412px) {
			margin-top: min(10%, 60px);
			margin-bottom: min(10%, 60px);
		}
		letter-spacing: 0.02em;
		font-weight: 400;
		max-width: 800px;
		line-height: 160%;
		font-size: 14px;
		@media (min-width: 412px) {
			font-size: 16px;
		}
		strong {
			font-weight: 800;
		}
	}
	&__metric_wrapper {
		margin-top: min(8%, 30px);
		@media (min-width: 600px) {
			margin-top: min(8%, 50px);
		}
		margin-bottom: min(20%, 100px);
		display: flex;
		align-items: center;
		max-width: 100%;
		li {
			line-height: 90%;
			font-weight: 700;
			margin-right: 30px;
			font-size: 20px;
			@media (min-width: 412px) {
				font-size: 26px;
			}
			@media (min-width: 1000px) {
				font-size: 36px;
				margin-right: 50px;
			}
			@media (min-width: 1200px) {
				margin-right: 70px;
			}
			span {
				display: block;
				font-weight: 400;
				line-height: 20px;
				font-size: 12px;
				@media (min-width: 1000px) {
					font-size: 16px;
				}
			}
		}
	}
	.horizontal-rule {
		opacity: 0.5;
	}
}

.home-projects {
	padding-top: 80px;
	padding-bottom: 40px;
	@media (min-width: 800px) {
		padding-top: 100px;
		padding-bottom: 100px;
	}
	@media (min-width: 1200px) {
		padding-top: 140px;
		padding-bottom: 140px;
	}
}

.home-projects .is-style-see-all .is-style-link-cta {
}

.home-projects-intro {
	text-align: center;
	margin-bottom: 40px;
	@media (min-width: 1000px) {
		margin-bottom: 80px;
	}
	@media (min-width: 782px) {
		text-align: left;
	}
	&__col1 {
		grid-column: span 12;
		@media (min-width: 1000px) {
			grid-column: span 7;
		}
	}
	&__col2 {
		grid-column: span 12;
		@media (min-width: 1000px) {
			grid-column: span 5;
			align-self: end;
		}
	}
}

.home-projects-numbers {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	column-gap: 10px;
	text-align: center;
	@media (min-width: 782px) {
		text-align: left;
	}
	&__graduated,
	&__incubating,
	&__sandbox {
		a {
			display: flex;
			flex-direction: column;
			@media (min-width: 782px) {
				flex-direction: row;
				align-items: center;
			}
		}
	}
	.number {
		font-weight: 700;
		margin-bottom: 5px;
		font-size: 34px;
		line-height: 34px;
		@media (min-width: 782px) {
			font-size: 44px;
			line-height: 44px;
			width: 65px;
			text-align: left;
		}
		@media (min-width: 1000px) {
			font-size: 60px;
			line-height: 60px;
			width: 90px;
		}
	}
	.project {
		font-size: 13px;
		line-height: 125%;
		text-transform: uppercase;
		font-weight: 400;
		@media (min-width: 782px) {
			margin-left: min(4%, 20px);
			line-height: 140%;
		}
		@media (min-width: 1000px) {
			margin-left: 10px;
			font-size: 18px;
			padding-bottom: 1px;
		}
	}
	a {
		color: $black;
		&:hover {
			text-decoration: none;
			color: $gray-700;
		}
	}
}

.home-projects-slider {
	position: relative;
	margin-top: 40px;
	@media (min-width: 782px) {
		margin-top: 80px;
	}
	.slick-initialized .slick-track {
		display: flex;

		.slick-slide {
			display: flex;
			height: auto;
			justify-content: center;
		}
	}

	.slick-slide {
		background: $white;
		filter: drop-shadow(0px 1.56476px 3.9119px rgba(0, 0, 0, 0.05));
		border: 1px solid rgba($gray-300, 0.1);
		border-radius: 5px;
		margin-right: 15px;
		margin-bottom: 15px;
		@media (min-width: 782px) {
			margin-right: 35px;
			margin-bottom: 35px;
		}
		padding: 15px;
		display: flex;
		align-content: center;
		align-items: center;
		justify-content: flex-start;

		img {
			width: 45px;
			height: 45px;
			@media (min-width: 782px) {
				width: 65px;
				height: 65px;
			}
		}

		&:hover,
		&:focus,
		&:active {
			border: 1px solid rgba($gray-300, 0.3);
			animation-name: pop-sm;
			animation-duration: 0.2s;
			animation-timing-function: linear;
			animation-iteration-count: 1;
		}
	}
}

.slider {
	opacity: 0;
}

.slider.slick-initialized {
	opacity: 1;
	transition: opacity 0.3s ease-out;
}

.slick-slider {
	margin: 0;
	min-height: 1px;
	min-width: 1px;
}

.has-cncf-background-pattern {
	background-image: url('/wp-content/themes/cncf-twenty-two/images/bg-cncf-pattern.png');
	background-position: bottom;
}

.home-intro-boxes {
	@media (min-width: 1000px) {
		grid-row-gap: 70px;
	}
}
/* ... */

